--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,5 +1,4 @@
-
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="blue">White</color>
+     <color name="blue">#ffffff</color>
 </resources>
